# LazyNES

./: Helpers.hs  LazyNES.cabal  Main.hs  Makefile  README
CPU/: Addressing.hs  Cycle.hs  Definition.hs  Helpers.hs  Instructions.hs  MemoryAddressing.hs  Types.hs
src/: Helpers.hs  Main.hs
src/CPU/: Addressing.hi  Addressing.hs  Definition.hi  Definition.hs  Instructions.hi  Instructions.hs  Types.hi  Types.hs
test/: test.hs
test/CPU/Instructions/: Tests.hs
