Name:                lazynes
Version:             0.1
Description:         Super cool mega lambdas
License:             GPL
License-file:        LICENSE
Author:              TBD
Maintainer:          TBD
Build-Type:          Simple
Cabal-Version:       >=1.8

Library
    hs-source-dirs:    src
    build-depends:     base >= 3, array, mtl

Executable LazyNES
    main-is:           Main.hs
    hs-source-dirs:    src
    build-depends:     base >= 3, array, mtl, lazynes

Test-Suite test
    main-is:           test.hs
    hs-source-dirs:    src, test
    build-depends:     base, tasty, tasty-hunit, array, mtl, lazynes
    type:              exitcode-stdio-1.0
